syntax = "proto3";

package tech.monstrs.chats_system.authkey.v1alpha1;

import "tech/monstrs/chats_system/authkey/v1alpha1/authkey.types.proto";

service AuthKeyService {
  rpc CreateAuthKey(CreateAuthKeyRequest) returns (CreateAuthKeyResponse) {}
  rpc CreateAuthKeyUser(CreateAuthKeyUserRequest) returns (CreateAuthKeyUserResponse) {}
  rpc GetAuthKey(GetAuthKeyRequest) returns (GetAuthKeyResponse) {}
  rpc GetAuthKeyUser(GetAuthKeyUserRequest) returns (GetAuthKeyUserResponse) {}
}

message CreateAuthKeyRequest {
  int64 id = 1;
  bytes key = 2;
}

message CreateAuthKeyResponse {
  AuthKey auth_key = 1;
}

message CreateAuthKeyUserRequest {
  int64 auth_key_id = 1;
  int64 user_id = 2;
}

message CreateAuthKeyUserResponse {
  AuthKeyUser auth_key_user = 1;
}

message GetAuthKeyRequest {
  int64 auth_key_id = 1;
}

message GetAuthKeyResponse {
  AuthKey auth_key = 1;
}

message GetAuthKeyUserRequest {
  int64 auth_key_id = 1;
}

message GetAuthKeyUserResponse {
  AuthKeyUser auth_key_user = 1;
}
